# pickleball-video-editor

./: .gitignore  AUDIO_BOUNDARY_CORRECTION_LOOP_PLAN.md  INCEPTION.md  Makefile  README.md  RICH_VISUAL_SIGNAL_HANDOFF.md  TODO.md  TRAINING_REPORT_2026-06-16.md  VISUAL_SUBSYSTEM_REBUILD_PLAN.md  WINNER_MODEL_TRAINER_APPROACH_A_IMPLEMENTATION_PLAN.md  config.mk  configure  pickleball-editor.desktop  pickleball-editor.spec  pyproject.toml  rally-segmentation-fusion-context.md  requirements.txt  run_tests.sh  test_dialogs.py  test_dialogs_demo.py  test_dialogs_visual.py  test_fonts.py  test_locale.py  test_output_generation.py  test_output_generators.py  test_output_integration.py  test_playback_controls.py  test_playback_controls_unit.py  test_probe_demo.py  test_rally_button.py  test_review_integration.py  test_review_mode.py  test_session_integration.py  test_session_manager.py  test_setup_dialog.py  test_status_overlay.py  test_theme_demo.py  test_toast_demo.py
docs/: DETAILED_DESIGN.md  DETAILED_DESIGN_UPDATE_SUMMARY.md  DIALOGS_IMPLEMENTATION.md  DIALOGS_QUICK_REFERENCE.md  OUTPUT_GENERATION_INTEGRATION.md  OUTPUT_GENERATION_USAGE.md  OUTPUT_MODULE_COMPLETE.md  OUTPUT_MODULE_SUMMARY.md  OUTPUT_QUICK_REFERENCE.md  PHASE_2.2_SUMMARY.md  PHASE_3.1_SUMMARY.md  PHASE_7.2_SESSION_INTEGRATION_SUMMARY.md  PHASE_8_REVIEW_MODE_SUMMARY.md  PHASE_DIALOGS_SUMMARY.md  PLAYBACK_CONTROLS.md  PRD.md  RESPONSIVE_DESIGN_ANALYSIS.md  RESPONSIVE_DESIGN_DIAGRAMS.txt  REVIEW_MODE_IMPLEMENTATION.md  REVIEW_MODE_INTEGRATION.md  REVIEW_MODE_USAGE.md  SCORE_STATE_EXAMPLES.md  SYSTEM_DIALOGS.md  (+15 more)
(+331 files in other folders)
